# etl-jobs

./: .gitignore  README.md  pyproject.toml
etl_jobs/bronze/: cryptocompare_to_r2.py  influx_cobre.py
etl_jobs/common/: partition_writer.py  spark_session.py  utils.py
etl_jobs/gold/: daily_aggregation.py
etl_jobs/jobs/: cryptocompare_to_r2.py  influx_to_r2.py
etl_jobs/silver/: influx_electricity.py
